--- a/creditos.html
+++ b/creditos.html
@@ -9,7 +9,11 @@
     <P>
         iconos tomados de https://www.flaticon.es/packs/responsive-web
         faticon
+        
     </P>
+     <P>
+         modificando de github mio experimento para colaboraciones 
+ </P>
 </head>
 <body>
     
